Las katas del 1 al 9 ya fueron terminadas